--- a/WeatherApp/app/src/main/res/values/strings.xml
+++ b/WeatherApp/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search_title">Search</string>
     <string name="search_hint">Search…</string>
+    <string name="twitter">twitter</string>
+    <string name="weather_data">WEATHER DATA</string>
+    <string name="weekly">WEEKLY</string>
+    <string name="today">TODAY</string>
 </resources>
